# LoopBasedDualLayerReprojection

./: .gitignore  .gitmodules  README.md
client/: index.html  package.json  tsconfig.json  vite.config.ts
client/lib/: .gitmodules  CMakeLists.txt  ar-streaming-lib.d.ts
client/lib/src/: lib.cpp
client/source/: Benchmark.tsx  BenchmarkSuite.tsx  CaptureReplay.tsx  Conditions.tsx  Replay.tsx  index.tsx  scene.tsx  settings.tsx
client/source/RemoteRendering/: Array6.ts  Connection.ts  FrameDecoder.ts  GeometryDecodeWorker.ts  GeometryDecoder.ts  Layer.ts  Mesh.frag  Mesh.vert  Renderer.ts  Session.ts  ShaderProgram.ts  UI.vert  index.tsx
client/source/some_code/: connection.ts  display.ts  display_device.ts  geometry_decoder.ts  geometry_worker.ts  image_decoder.ts  log.ts  renderer.ts  session.ts  shader.ts
client/src/: App.module.css  App.tsx  Condition.tsx  FinalQuestionnaire.module.css  FinalQuestionnaire.tsx  Home.tsx  NasaTLXQuestionnaire.module.css  NasaTLXQuestionnaire.tsx  Navigation.css  Navigation.tsx  ParticipantIdForm.tsx  WithParticipantId.tsx  index.css  index.tsx
client/src/RemoteRendering/: Connection.ts  FrameDecoder.ts  GeometryDecodeWorker.ts  Layer.ts  Mesh.ts  Renderer.ts  Session.ts  UI.frag  UIRenderer.ts  index.tsx
client/website/: index.html
client/website/assets/: styles.scss
client/website/shaders/: layer_shader.frag  layer_shader.vert
client/website/source/: index.tsx
client/website/source/components/: file_browser.tsx  local_storage.tsx  scene_browser.tsx  setting.tsx  settings.tsx
client/website/source/remote_rendering/: animation.ts  connection.ts  display.ts  frame.ts  geometry_decoder.ts  geometry_worker.ts  image_decoder.ts  index.tsx  log.ts  metadata.ts  render_time.ts  renderer.ts  session.ts  shader.ts  wrapper.ts
client/wrapper/: CMakeLists.txt
client/wrapper/binary/: wrapper.d.ts  wrapper.js  wrapper.wasm
client/wrapper/source/: wrapper.cpp
server/: CMakeLists.txt
server/shaders/: application_preview_shader.frag  application_preview_shader.vert  experiment_generator_base_shader.comp  experiment_generator_bridge_shader.comp  experiment_generator_combine_shader.comp  experiment_generator_discard_shader.comp  experiment_generator_distribute_shader.comp  experiment_generator_vector_shader.comp  experiment_generator_write_shader.comp  line_generator_edge_shader.comp  line_generator_quad_tree_shader.comp  loop_base_shader.comp  loop_combine_shader.comp  loop_discard_shader.comp  loop_distribute_shader.comp  loop_generator_base_shader.comp  loop_generator_combine_shader.comp  loop_generator_distribute_shader.comp  loop_generator_vector_shader.comp  loop_generator_write_shader.comp  loop_split_shader.comp  loop_vector_shader.comp  loop_write_shader.comp  quad_copy_shader.comp  quad_corner_shader.comp  quad_delta_shader.comp  quad_refine_shader.comp  quad_write_shader.comp  scene_indirect_inject_shader.frag  scene_indirect_inject_shader.geom  scene_indirect_inject_shader.vert  scene_indirect_opacity_shader.comp  scene_indirect_propagate_shader.comp  scene_indirect_visibility_shader.frag  scene_indirect_visibility_shader.geom  scene_light_shader.frag  scene_light_shader.vert  scene_volume_capture_shader.frag  scene_volume_capture_shader.vert  scene_volume_integrate_shader.comp  (+8 more)
server/source/: application.cpp  application.hpp  camera.cpp  camera.hpp  command_parser.cpp  command_parser.hpp  encoder.cpp  encoder.hpp  export.cpp  export.hpp  main.cpp  scene.cpp  scene.hpp  server.cpp  server.hpp  session.cpp  session.hpp  shader.cpp  shader.hpp  timer.cpp  timer.hpp  worker.cpp  worker.hpp
server/source/mesh_generator/: experiment_generator.cpp  experiment_generator.hpp  experiment_triangulation.cpp  experiment_triangulation.hpp  line_generator.cpp  line_generator.hpp  line_triangulation.cpp  line_triangulation.hpp  loop_generator.cpp  loop_generator.hpp  loop_triangulation.cpp  loop_triangulation.hpp  mesh_generator.cpp  mesh_generator.hpp  quad_generator.cpp  quad_generator.hpp
shared/: CMakeLists.txt
shared/source/: geometry_codec.cpp  geometry_codec.hpp  huffman.cpp  huffman.hpp  protocol.hpp  session_client.cpp  stream_client.hpp  stream_server.cpp  streaming_server.cpp  streaming_server.hpp  types.hpp
